# cscore_sstelem

./: .gitignore  0825_cscore.cc  2Node_test.py  Makefile.am  NW.cc  NW.h  README.md  convert_ev_packet.cc  convert_ev_packet.h  csEvent.h  cs_sst_constants.h  cscore.cc  cscore.h  cscore.lo  cxl_mempool.cc  cxl_mempool.h  fabric.cc  fabric.h  find_missing_files.sh  list_all_srcs.sh  listed_srcfiles.txt  sample_cxl_config.csv  switch.cc  switch.h  topology_example.py
experiments/load_store_util_sweep/: pool_sweep.py  pool_sweep_replication.py  run_latency_diagnose.py  run_latency_diagnose.sh  run_sweep.py
experiments/replication/: cxl_config.csv  pool.py  pool_synth.py  pool_with_replication.py  pool_with_replication_mpi.py  run_perf.sh  run_weak_scaling.sh  simple_rw.cpp  synth_cxl_config.csv
experiments/replication/logs/run_16.out/1/rank.00/: stdout
experiments/replication/logs/run_16.out/1/rank.02/: stdout
experiments/replication/logs/run_16.out/1/rank.03/: stdout
experiments/replication/logs/run_16.out/1/rank.04/: stdout
experiments/replication/logs/run_16.out/1/rank.05/: stdout
experiments/replication/logs/run_16.out/1/rank.07/: stdout
experiments/replication/logs/run_16.out/1/rank.09/: stdout
experiments/replication/logs/run_16.out/1/rank.11/: stdout
experiments/replication/logs/run_16.out/1/rank.14/: stdout
experiments/replication/logs/run_16.out/1/rank.15/: stdout
experiments/replication/logs/run_2.out/1/rank.0/: stdout
experiments/replication/logs/run_8.out/1/rank.2/: stdout
experiments/replication/logs/run_8.out/1/rank.3/: stdout
experiments/replication/logs/run_8.out/1/rank.7/: stdout
experiments/replication/logs_strong_scaling/run_1.out/1/rank.0/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.01/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.06/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.08/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.10/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.12/: stdout
experiments/replication/logs_strong_scaling/run_16.out/1/rank.13/: stdout
experiments/replication/logs_strong_scaling/run_2.out/1/rank.1/: stdout
experiments/replication/logs_strong_scaling/run_4.out/1/rank.0/: stdout
experiments/replication/logs_strong_scaling/run_4.out/1/rank.1/: stdout
experiments/replication/logs_strong_scaling/run_4.out/1/rank.2/: stdout
experiments/replication/logs_strong_scaling/run_4.out/1/rank.3/: stdout
experiments/replication/logs_strong_scaling/run_8.out/1/rank.0/: stdout
experiments/replication/logs_strong_scaling/run_8.out/1/rank.1/: stdout
experiments/replication/logs_strong_scaling/run_8.out/1/rank.4/: stdout
experiments/replication/logs_strong_scaling/run_8.out/1/rank.5/: stdout
experiments/replication/logs_strong_scaling/run_8.out/1/rank.6/: stdout
experiments/replication/logs_weak_scaling/run_1.out/1/rank.0/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.00/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.01/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.02/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.03/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.04/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.05/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.06/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.07/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.08/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.09/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.10/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.11/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.12/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.13/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.14/: stdout
experiments/replication/logs_weak_scaling/run_16.out/1/rank.15/: stdout
experiments/replication/logs_weak_scaling/run_2.out/1/rank.0/: stdout
experiments/simple/: README.md  cxl_config.csv  pool.py  pool_with_switch.py  simple.cpp
experiments/starnuma_validation/: pool.py
inc/: SST_CS_packets.h  address_map.h  cache.h  cache_builder.h  cache_stats.h  champsim.h  control_event.h  core_inst.h  cxl_request_buffer.h  fabric_port.h  instruction.h  lat_bw_queue.h  my_memory_controller.h  ooo_cpu.h  physical_channel.h  ptw.h  repeatable.h  stats_printer.h  timing_utility.h  trace_instruction.h  tracereader.h  vmem.h  waitable.h
scripts/: generate_rw_traces.py  generate_synth_trace.cpp  page_owner_to_cxl_config.py  run_sst_timed.py
src/: SST_CS_packets.cc  address_map.cc  cache.cc  cache_stats.cc  channel.cc  cxl_request_buffer.cc  dram_controller.cc  fabric_port.cc  generated_environment.cc  json_printer.cc  lat_bw_queue.cc  my_memory_controller.cc  ooo_cpu.cc  operable.cc  orig_core_inst.cc  plain_printer.cc  ptw.cc  vmem.cc
tracer/: champsim_tracer.cpp
traces/: simple.cpp
(+13 files in other folders)
